Login and Registration Page created.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,3 +65,18 @@ code {
   width: 100% !important;
   z-index: 9999;
 }
+
+.bs {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  padding: 20px;
+  text-align: center;
+}
+
+button {
+  background-color: #001529 !important;
+  color: white !important;
+}
+
+.login {
+  padding-top: 150px;
+}
