Bootstrap updated to latest version and css fixed according to it.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* font-family: 'Montserrat', sans-serif !important; */
 }
 
 code {
@@ -40,7 +43,7 @@ code {
 
 .ant-layout-header span svg {
   height: 25px !important;
-  width: 25px important;
+  width: 25px !important;
   margin-left: 10px !important;
 }
 
@@ -86,7 +89,7 @@ button {
 
 .loginPageLogo {
   color: white;
-  padding: 100px;
+  padding: 10rem;
   font-size: 20rem;
 }
 
@@ -101,8 +104,8 @@ button {
 .register {
   /* background-color: #001529; */
   background-color: #26003b;
-  padding-top: 150px;
-  padding-bottom: 150px;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   height: 100vh;
   width: 100vw;
 
@@ -111,7 +114,7 @@ button {
 
 .arrow {
   position: relative;
-  bottom: 25rem;
+  bottom: 35rem;
   left: 50%;
   margin-left: -20px;
   width: 40px;
@@ -139,23 +142,23 @@ button {
   }
 }
 
-p {
+#logoName {
   animation-duration: 2s;
-  animation-name: bounceInUp;
+  animation-name: bounceInDown;
   animation-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
-@keyframes bounceInUp {
+@keyframes bounceInDown {
   0% {
     opacity: 0;
-    transform: translateY(2000px);
+    transform: translateY(-2000px);
   }
   60% {
     opacity: 1;
-    transform: translateY(-30px);
+    transform: translateY(30px);
   }
   80% {
-    transform: translateY(10px);
+    transform: translateY(-10px);
   }
   100% {
     transform: translateY(0);
@@ -202,14 +205,24 @@ Input:hover {
 .registerLogo {
   position: relative;
   top: 7rem;
-  font-size: 15rem;
+  left: -5rem;
+  font-size: 10rem;
 }
 
-a {
+.loginATag {
   padding-top: 20px !important;
   color: blue !important;
 }
 
-a:hover {
+.loginATag:hover {
   color: white !important;
+}
+
+.flex {
+  display: flex !important;
+  align-items: center !important;
+}
+
+.register-flex {
+  display: flex !important;
 }
