--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -258,7 +264,8 @@ form button:hover {
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
   display: inline-block;
-  font-size: 190px;
+  /* font-size: 190px; */
+  font-size: 15rem;
 }
 
 @keyframes textclip {
@@ -401,4 +408,67 @@ input,
   background-color: rgb(52, 9, 104) !important;
   border: 1px solid rgb(33, 2, 102) !important;
   cursor: pointer !important;
+}
+
+.loginForm {
+  padding: 5rem;
+}
+
+/**** MEDIA QUERIES OF LOGIN PAGE ****/
+@media screen and (max-width: 650px) {
+  .animate-character {
+    font-size: 5rem;
+  }
+
+  .arrow {
+    bottom: 5rem;
+  }
+}
+
+@media screen and (min-width: 651px) {
+  .animate-character {
+    font-size: 10rem;
+  }
+
+  .arrow {
+    bottom: 20rem;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .animate-character {
+    font-size: 3.5rem;
+  }
+
+  .arrow {
+    bottom: 5rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .login {
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .login {
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+  .loginForm {
+    padding: 2rem !important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .login {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+
+  .loginForm {
+    padding: 1rem;
+  }
 }
